--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,19 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -36,6 +49,10 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'org.jetbrains.kotlin:kotlin-reflect:1.0.5-3'
     compile 'com.google.dagger:dagger:2.8'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.5"
+    compile 'com.fasterxml.jackson.core:jackson-core:2.8.5'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     testCompile 'junit:junit:4.12'
     kapt 'com.google.dagger:dagger-compiler:2.8'
 }
